--- a/chat_04_img_structured.qmd
+++ b/chat_04_img_structured.qmd
@@ -11,7 +11,7 @@ library(ellmer)
 library(here)
 
 # set llm client
-client <- client <- chat_openai(
+client <- chat_openai(
     model = "gpt-4o-mini"
 )
 
