getting more sophisticated with querychat app based on mtcars

--- a/chat_02.qmd
+++ b/chat_02.qmd
@@ -45,5 +45,11 @@ Don't have to use console for answers:
 # - prompt box will be at bottom
 # - if in viewer, may be hard to close
 # - there is an 'x' but may need to use Viewer window 'x'
-live_browser(client)
+# quiet = FALSE supposed to show initial message but doesn't do anything - at least in browser
+live_browser(client, quiet = FALSE)
 ```
+
+Although would be cooler if:
+
+* you could control additional output, such as title, instructions
+* maybe that's what app approach with querychat is for?
